# memo-ros

./: .gitignore  CMakeLists.txt  README.md  dependency.md  关于压缩.md
cmake/: configuration.cmake
cmake/modules/: Findassuan.cmake  Findboost.cmake  Findbzip2.cmake  Findclass_loader.cmake  Findclients.cmake  Findconsole_bridge.cmake  Findcpp_common.cmake  Findcrypto.cmake  Findgpgerror.cmake  Findgpgme.cmake  Findmessage_filters.cmake  Findpluginlib.cmake  Findrosbag.cmake  Findrosconsole.cmake  Findroscpp_serialization.cmake  Findroscpp_traits.cmake  Findroslz4.cmake  Findrostime.cmake  Findxmlrpcpp.cmake
devel/roscpp/: EmptyRequest.h  EmptyResponse.h  GetLoggersRequest.h  GetLoggersResponse.h  Logger.h  SetLoggerLevelRequest.h  SetLoggerLevelResponse.h
devel/rosgraph_msgs/: Clock.h  Log.h  TopicStatistics.h
docs/: 01_简要概述.md  02_总体框架.md  03_基础环境.md  04_环境搭建.md  gpg.md  生成文件.md
docs/img/: ROS
gpgme/lib/: libgpgme-pthread.la  libgpgme-pthread.so.11.14.0  libgpgme.la  libgpgme.so.11.14.0
gpgme/share/info/: dir
include/bzip2/: blocksort.c  bzip2.c  bzlib.c  bzlib.h  bzlib_private.h  compress.c  crctable.c  decompress.c  huffman.c  randtable.c
include/pluginlib/include/pluginlib/: class_list_macros.hpp
include/ros_comm/clients/roscpp/: CMakeLists.txt
libassuan/lib/: libassuan.la  libassuan.so.0.7.2
libassuan/share/info/: dir
libgpg-error/include/: gpg-error.h
libgpg-error/lib/: libgpg-error.la  libgpg-error.so.0.17.0
libgpg-error/share/info/: dir
libgpg-error/share/man/man1/: gpg-error-config.1
libs/boost/: libboost_atomic.so.1.83.0  libboost_chrono.so.1.83.0  libboost_container.so.1.83.0  libboost_context.so.1.83.0  libboost_contract.so.1.83.0  libboost_coroutine.so.1.83.0  libboost_date_time.so.1.83.0  libboost_filesystem.so.1.83.0  libboost_graph.so.1.83.0  libboost_iostreams.so.1.83.0  libboost_log.so.1.83.0  libboost_log_setup.so.1.83.0  libboost_numpy310.so.1.83.0  libboost_prg_exec_monitor.so.1.83.0  libboost_program_options.so.1.83.0  libboost_python310.so.1.83.0  libboost_random.so.1.83.0  libboost_regex.so.1.83.0  libboost_serialization.so.1.83.0  libboost_stacktrace_addr2line.so.1.83.0  libboost_stacktrace_backtrace.so.1.83.0  libboost_stacktrace_basic.so.1.83.0  libboost_stacktrace_noop.so.1.83.0  libboost_system.so.1.83.0  libboost_thread.so.1.83.0  libboost_timer.so.1.83.0  libboost_type_erasure.so.1.83.0  libboost_unit_test_framework.so.1.83.0  libboost_wserialization.so.1.83.0
libs/boost/cmake/boost_atomic-1.83.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
libs/boost/cmake/boost_chrono-1.83.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
libs/boost/cmake/boost_container-1.83.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
libs/boost/cmake/boost_context-1.83.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
libs/boost/cmake/boost_contract-1.83.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
libs/boost/cmake/boost_coroutine-1.83.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
libs/boost/cmake/boost_date_time-1.83.0/: boost_date_time-config.cmake  libboost_date_time-variant-shared.cmake  libboost_date_time-variant-static.cmake
libs/boost/cmake/boost_exception-1.83.0/: boost_exception-config.cmake
libs/boost/cmake/boost_filesystem-1.83.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
libs/boost/cmake/boost_graph-1.83.0/: boost_graph-config.cmake  libboost_graph-variant-shared.cmake  libboost_graph-variant-static.cmake
libs/boost/cmake/boost_graph_parallel-1.83.0/: boost_graph_parallel-config.cmake
libs/boost/cmake/boost_headers-1.83.0/: boost_headers-config.cmake
libs/boost/cmake/boost_iostreams-1.83.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake  libboost_iostreams-variant-static.cmake
libs/boost/cmake/boost_log-1.83.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
libs/boost/cmake/boost_log_setup-1.83.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-shared.cmake  libboost_log_setup-variant-static.cmake
libs/boost/cmake/boost_mpi-1.83.0/: boost_mpi-config.cmake
libs/boost/cmake/boost_numpy-1.83.0/: boost_numpy-config.cmake  libboost_numpy-variant-shared-py3.10.cmake  libboost_numpy-variant-static-py3.10.cmake
libs/boost/cmake/boost_prg_exec_monitor-1.83.0/: boost_prg_exec_monitor-config.cmake  libboost_prg_exec_monitor-variant-shared.cmake  libboost_prg_exec_monitor-variant-static.cmake
libs/boost/cmake/boost_program_options-1.83.0/: boost_program_options-config.cmake  libboost_program_options-variant-shared.cmake  libboost_program_options-variant-static.cmake
libs/boost/cmake/boost_python-1.83.0/: boost_python-config.cmake  libboost_python-variant-shared-py3.10.cmake  libboost_python-variant-static-py3.10.cmake
libs/boost/cmake/boost_random-1.83.0/: boost_random-config.cmake  libboost_random-variant-shared.cmake  libboost_random-variant-static.cmake
libs/boost/cmake/boost_regex-1.83.0/: boost_regex-config.cmake  libboost_regex-variant-shared.cmake  (+1 more)
tests/: CMakeLists.txt  README.md  bag_info.cpp  pub.cpp  pub_string.cpp
tests/case_00/: CMakeLists.txt
tests/case_01/: CMakeLists.txt  README.md  pub_twist.cpp  sub_twist.cpp
tests/case_02/: CMakeLists.txt  sub.cpp
tests/case_03/: CMakeLists.txt  pub_string.cpp  sub_string.cpp
tests/case_04/: CMakeLists.txt  enc_dec.cpp  encrypt.cpp
tests/case_05/: CMakeLists.txt  enc_dec_log.cpp  helper.h  rosbag_with_pgp.cpp  rosbag_without_pgp.cpp  write.cpp  writelog.cpp
tests/case_05/msg/: CMakeLists.txt  package.xml
tests/case_05/msg/roslog/: detail.msg
tests/case_05/roslog/: detail.h
util/: tools.h
(+40 files in other folders)
